[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]

dynamic = ["version"]

authors = [
  { name="pravallitha", email="gpravallitha@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
] 

[tool.hatch.version]
path = "src/__init__.py"